modernize doctest framework to use jdk.javadoc.doclet API
Replace the removed com.sun.javadoc.* API with the modern
jdk.javadoc.doclet + com.sun.source.doctree APIs (available
since Java 9). This fixes doctest extraction and execution
on Java 11+, where the old Doclet API no longer exists.

Key changes:
- DocTestDoclet now implements jdk.javadoc.doclet.Doclet interface
- Use DocumentationTool + DocTrees to parse Javadoc comments
- Walk DocCommentTree for @code inline tags instead of Tag objects
- Replace com.sun.tools.javadoc.Main.execute() with
  ToolProvider.getSystemDocumentationTool()
- Remove build-doctest profile from pom.xml (tools.jar no longer needed)
- Replace deprecated Class.newInstance() with getDeclaredConstructor()

All 62 doctests pass with zero failures on Java 21.

https://claude.ai/code/session_01JcbERxZRFgNvpoSJ83oe3w