@@ -20,6 +20,7 @@ package joinery.doctest;
 
 import java.io.BufferedReader;
 import java.io.ByteArrayOutputStream;
+import java.io.File;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.io.StringReader;
@@ -30,17 +31,25 @@ import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
 import java.net.URI;
 import java.security.SecureClassLoader;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.Callable;
 
+import javax.lang.model.SourceVersion;
+import javax.lang.model.element.Element;
+import javax.lang.model.element.ElementKind;
+import javax.lang.model.element.ExecutableElement;
+import javax.lang.model.element.TypeElement;
+import javax.lang.model.element.VariableElement;
 import javax.tools.Diagnostic;
 import javax.tools.DiagnosticListener;
+import javax.tools.DocumentationTool;
 import javax.tools.FileObject;
 import javax.tools.ForwardingJavaFileManager;
 import javax.tools.JavaCompiler;
@@ -48,6 +57,7 @@ import javax.tools.JavaFileManager;
 import javax.tools.JavaFileObject;
 import javax.tools.JavaFileObject.Kind;
 import javax.tools.SimpleJavaFileObject;
+import javax.tools.StandardJavaFileManager;
 import javax.tools.ToolProvider;
 
 import org.junit.runner.Description;
@@ -58,13 +68,14 @@ import org.junit.runners.Suite;
 import org.junit.runners.model.InitializationError;
 import org.junit.runners.model.RunnerBuilder;
 
-import com.sun.javadoc.ClassDoc;
-import com.sun.javadoc.Doclet;
-import com.sun.javadoc.ExecutableMemberDoc;
-import com.sun.javadoc.LanguageVersion;
-import com.sun.javadoc.ProgramElementDoc;
-import com.sun.javadoc.RootDoc;
-import com.sun.javadoc.Tag;
+import com.sun.source.doctree.DocCommentTree;
+import com.sun.source.doctree.DocTree;
+import com.sun.source.doctree.LiteralTree;
+import com.sun.source.util.DocTrees;
+
+import jdk.javadoc.doclet.Doclet;
+import jdk.javadoc.doclet.DocletEnvironment;
+import jdk.javadoc.doclet.Reporter;
 
 public class DocTestSuite
 extends Suite {
@@ -77,19 +88,36 @@ extends Suite {
     }
 
     public static final class DocTestDoclet
-    extends Doclet {
+    implements Doclet {
         private static Map<String, Runner> doctests = new LinkedHashMap<>();
 
-        public static LanguageVersion languageVersion() {
-            return LanguageVersion.JAVA_1_5;
+        @Override
+        public void init(final Locale locale, final Reporter reporter) {
+        }
+
+        @Override
+        public String getName() {
+            return "DocTestDoclet";
+        }
+
+        @Override
+        public Set<? extends Option> getSupportedOptions() {
+            return Collections.emptySet();
+        }
+
+        @Override
+        public SourceVersion getSupportedSourceVersion() {
+            return SourceVersion.latest();
         }
 
         private static void generateRunner(
-                final ClassDoc cls, final ProgramElementDoc member, final Tag tag) {
+                final String qualifiedClassName, final String simpleClassName,
+                final String memberName, final String memberSignature,
+                final String tagText) {
             final List<String> lines = new LinkedList<>();
             final StringBuilder sb = new StringBuilder();
             String assertion = null;
-            try (BufferedReader reader = new BufferedReader(new StringReader(tag.text()))) {
+            try (BufferedReader reader = new BufferedReader(new StringReader(tagText))) {
                 for (String line = reader.readLine(); line != null; line = reader.readLine()) {
                     line = line.trim();
                     final int index = line.indexOf(">") + 1;
@@ -117,7 +145,6 @@ extends Suite {
                 throw new IllegalStateException("error reading string", ex);
             }
 
-            // TODO extract imports and insert at beginning of generated class
             for (final String line : lines) {
                 sb.append(line).append("\n");
             }
@@ -126,13 +153,11 @@ extends Suite {
             }
 
             final String expected = assertion;
-            doctests.put(member.toString(), new Runner() {
+            doctests.put(memberName + memberSignature, new Runner() {
                 @Override
                 public Description getDescription() {
-                    final String sig = member instanceof ExecutableMemberDoc ?
-                        ExecutableMemberDoc.class.cast(member).flatSignature() : "";
                     return Description.createTestDescription(
-                            cls.qualifiedName(), member.name() + sig);
+                            qualifiedClassName, memberName + memberSignature);
                 }
 
                 @Override
@@ -140,10 +165,10 @@ extends Suite {
                     notifier.fireTestStarted(getDescription());
                     Object value = null;
                     try {
-                        final String name = String.format("%sDocTest", cls.name());
+                        final String name = String.format("%sDocTest", simpleClassName);
                         final String source =
-                            "import " + cls.qualifiedName() + ";\n" +
-                            "import " + cls.qualifiedName() + ".*;\n" +
+                            "import " + qualifiedClassName + ";\n" +
+                            "import " + qualifiedClassName + ".*;\n" +
                             "import java.util.*;\n" +
                             "import java.sql.Connection;\n" +
                             "import java.sql.DriverManager;\n" +
@@ -216,7 +241,7 @@ extends Suite {
                         }
 
                         final Class<?> cls = mgr.getClassLoader(null).loadClass(name);
-                        value = Callable.class.cast(cls.newInstance()).call();
+                        value = Callable.class.cast(cls.getDeclaredConstructor().newInstance()).call();
 
                         if (expected != null) {
                             org.junit.Assert.assertEquals(expected, String.valueOf(value));
@@ -232,17 +257,72 @@ extends Suite {
             });
         }
 
-        public static boolean start(final RootDoc root) {
-            for (final ClassDoc cls : root.classes()) {
-                final List<ProgramElementDoc> elements = new LinkedList<>();
-                elements.add(cls);
-                elements.addAll(Arrays.asList(cls.constructors()));
-                elements.addAll(Arrays.asList(cls.methods()));
-                for (final ProgramElementDoc elem : elements) {
-                    for (final Tag tag : elem.inlineTags()) {
-                        final String name = tag.name();
-                        if (name.equals("@code") && tag.text().trim().startsWith(">")) {
-                            generateRunner(cls, elem, tag);
+        private static String flatSignature(final ExecutableElement method) {
+            final StringBuilder sb = new StringBuilder();
+            sb.append("(");
+            boolean first = true;
+            for (final VariableElement param : method.getParameters()) {
+                if (!first) {
+                    sb.append(", ");
+                }
+                first = false;
+                sb.append(param.asType().toString()
+                    .replaceAll("<[^>]*>", "")
+                    .replaceAll("^.*\\.", ""));
+            }
+            sb.append(")");
+            return sb.toString();
+        }
+
+        private static void processElement(
+                final DocTrees docTrees, final TypeElement cls, final Element elem) {
+            final DocCommentTree docComment = docTrees.getDocCommentTree(elem);
+            if (docComment == null) {
+                return;
+            }
+
+            final String qualifiedName = cls.getQualifiedName().toString();
+            final String simpleName = cls.getSimpleName().toString();
+            final String memberName = elem.getSimpleName().toString();
+            final String memberSig = elem instanceof ExecutableElement ?
+                flatSignature((ExecutableElement) elem) : "";
+
+            // Walk all doc trees looking for @code inline tags
+            final List<? extends DocTree> body = docComment.getFullBody();
+            for (final DocTree tree : body) {
+                processDocTree(qualifiedName, simpleName, memberName, memberSig, tree);
+            }
+            for (final DocTree tree : docComment.getBlockTags()) {
+                processDocTree(qualifiedName, simpleName, memberName, memberSig, tree);
+            }
+        }
+
+        private static void processDocTree(
+                final String qualifiedName, final String simpleName,
+                final String memberName, final String memberSig,
+                final DocTree tree) {
+            if (tree.getKind() == DocTree.Kind.CODE) {
+                final LiteralTree codeTree = (LiteralTree) tree;
+                final String text = codeTree.getBody().getBody();
+                if (text.trim().startsWith(">")) {
+                    generateRunner(qualifiedName, simpleName, memberName, memberSig, text);
+                }
+            }
+        }
+
+        @Override
+        public boolean run(final DocletEnvironment env) {
+            final DocTrees docTrees = env.getDocTrees();
+            for (final Element elem : env.getIncludedElements()) {
+                if (elem.getKind() == ElementKind.CLASS || elem.getKind() == ElementKind.INTERFACE) {
+                    final TypeElement cls = (TypeElement) elem;
+                    // Process class-level doc
+                    processElement(docTrees, cls, cls);
+                    // Process constructors and methods
+                    for (final Element enclosed : cls.getEnclosedElements()) {
+                        if (enclosed.getKind() == ElementKind.CONSTRUCTOR ||
+                            enclosed.getKind() == ElementKind.METHOD) {
+                            processElement(docTrees, cls, enclosed);
                         }
                     }
                 }
@@ -262,15 +342,25 @@ extends Suite {
                 ));
         }
 
+        final DocumentationTool docTool = ToolProvider.getSystemDocumentationTool();
+        if (docTool == null) {
+            throw new InitializationError(
+                "SystemDocumentationTool not available (are you running on a JDK?)");
+        }
+
         for (final Class<?> c : suiteClasses.value()) {
             final String source = dir.value() + "/" +
                                   c.getName().replaceAll("\\.", "/") +
                                   Kind.SOURCE.extension;
-            com.sun.tools.javadoc.Main.execute(
-                    DocTestDoclet.class.getSimpleName(),
-                    DocTestDoclet.class.getName(),
-                    new String[] { source }
-                );
+            try (StandardJavaFileManager fm = docTool.getStandardFileManager(null, null, null)) {
+                final Iterable<? extends JavaFileObject> files =
+                    fm.getJavaFileObjects(new File(source));
+                final DocumentationTool.DocumentationTask task =
+                    docTool.getTask(null, fm, null, DocTestDoclet.class, null, files);
+                task.call();
+            } catch (final IOException ex) {
+                throw new InitializationError(ex);
+            }
         }
         return new LinkedList<>(DocTestDoclet.doctests.values());
     }
